--- a/core/res/res/values/dragons_strings.xml
+++ b/core/res/res/values/dragons_strings.xml
@@ -36,4 +36,10 @@
     <string name="global_action_search">Search</string>
     <string name="global_action_voicesearch">Voice Search</string>
 
+    <!-- ADB over network notification -->
+    <string name="adb_net_active_notification_title">ADB over network enabled</string>
+    <!-- ADB over USB and network notification -->
+    <string name="adb_both_active_notification_title">ADB over USB &amp; network enabled</string>
+    <!-- ADB notification message-->
+    <string name="adb_active_generic_notification_message">Touch to disable debugging.</string>
 </resources>
