Add ⚡ DASH charging support
Change-Id: Id609502241a4f810a69e0c4e2b754b498b0eaf0d

--- a/core/res/res/values/dragons_config.xml
+++ b/core/res/res/values/dragons_config.xml
@@ -83,5 +83,8 @@
 
     <!-- Whether device has physical tri state switch -->
     <bool name="config_hasAlertSlider">false</bool>
+
+    <!-- Wether device has dash charging support -->
+    <bool name="config_hasDashCharger">false</bool>
 </resources>
 
