--- a/core/res/res/values/dragons_symbols.xml
+++ b/core/res/res/values/dragons_symbols.xml
@@ -90,4 +90,7 @@
   <java-symbol type="string" name="alert_slider_state_path" />
   <java-symbol type="string" name="alert_slider_uevent_match_path" />
   <java-symbol type="bool" name="config_hasAlertSlider" />
+
+  <!-- Wether device has dash charging support -->
+  <java-symbol type="bool" name="config_hasDashCharger" />
 </resources>
