input: hardware buttons lights integration
Change-Id: Idf0b6ad7730a5a3894cf2de8f6cfe575f8639adb

--- a/core/res/res/values/dragons_symbols.xml
+++ b/core/res/res/values/dragons_symbols.xml
@@ -34,4 +34,9 @@
   <java-symbol type="string" name="global_action_search" />
   <java-symbol type="string" name="global_action_voicesearch" />
 
+  <!-- Button Brightness -->
+  <java-symbol type="integer" name="config_buttonBrightnessSettingMinimum" />
+  <java-symbol type="integer" name="config_buttonBrightnessSettingMaximum" />
+  <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
+
 </resources>
