--- a/core/res/res/values/dragons_symbols.xml
+++ b/core/res/res/values/dragons_symbols.xml
@@ -85,4 +85,9 @@
   <java-symbol type="bool" name="config_multiColorNotificationLed" />
   <java-symbol type="bool" name="config_intrusiveBatteryLed" />
   <java-symbol type="array" name="notification_light_package_mapping" />
+
+  <!-- Alert slider. -->
+  <java-symbol type="string" name="alert_slider_state_path" />
+  <java-symbol type="string" name="alert_slider_uevent_match_path" />
+  <java-symbol type="bool" name="config_hasAlertSlider" />
 </resources>
