Recents FAB Clear All Button Tweaks [1/2]
- Its a longway squash of multiple commits

- Credits : @varund7726 , @xyyx , @0xD34D , @maniac103 , @cristianomatos , @altaf-mahdi , @temasek

Change-Id: Ifd6601d4fc789693916e8cc0930c30ab9e148a35

Add Recents Fab Animation - Fade IN/OUT

Change-Id: Ibd3eef1124047a03b89afded765040775cd3772a

Fix Recents Fab icon in multiwindow

Change-Id: I9642df581e44613dff4522fd834baba72caea71e

Improvise Recents Fab icon

Change-Id: Iaf3070fb20e53322940dd6bbd5d368ee4be6de94

--- a/packages/SystemUI/res/values/dragons_dimens.xml
+++ b/packages/SystemUI/res/values/dragons_dimens.xml
@@ -20,4 +20,11 @@
 
     <!-- Recents task locking button -->
     <dimen name="recents_task_view_header_lock_button_padding">44dp</dimen>
+
+    <!-- Clear-All recents FAB -->
+    <dimen name="floating_action_button_height">56dp</dimen>
+    <dimen name="floating_action_button_width">56dp</dimen>
+    <dimen name="floating_action_button_translation_z">6dp</dimen>
+    <dimen name="floating_action_button_margin_side">48dp</dimen>
+    <dimen name="floating_action_button_margin_bottom">62dp</dimen>
 </resources>
