WindowManager: Add support for sRGB mode
Change-Id: Ica8528259b91c87754175c8026bfaec202aced6f
Signed-off-by: Thecrazyskull <anaskarbila@aospa.co>
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/core/res/res/values/dragons_config.xml
+++ b/core/res/res/values/dragons_config.xml
@@ -86,5 +86,8 @@
 
     <!-- Wether device has dash charging support -->
     <bool name="config_hasDashCharger">false</bool>
+
+    <!-- sRGB sysfs path -->
+    <string name="config_srgb_path"></string>
 </resources>
 
