--- a/core/res/res/values/dragons_colors.xml
+++ b/core/res/res/values/dragons_colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2017 The Pure Nexus Project
+<!-- Copyright (C) 2017 DRAGONS-CAF Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,14 +13,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+
 <resources>
-     <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
-     <dimen name="global_actions_avatar_size">40dp</dimen>
-
-     <!-- Shutdown/reboot dialog -->
-    <dimen name="shutdown_margin">10dp</dimen>
-    <dimen name="shutdown_logo_size">160dp</dimen>
-    <dimen name="shutdown_logo_margin_top">90dp</dimen>
-    <dimen name="shutdown_primary_text_margin_top">14dp</dimen>
-
+    <!-- Shutdown/reboot dialog -->
+    <color name="shutdown_primary_text">#FF57C927</color>
 </resources>
+ 
+ 
+ 
