--- a/core/res/res/values/dragons_symbols.xml
+++ b/core/res/res/values/dragons_symbols.xml
@@ -96,4 +96,16 @@
 
   <!-- sRGB mode -->
   <java-symbol type="string" name="config_srgb_path" />
+
+  <!-- Shutdown/reboot screen -->
+  <java-symbol type="layout" name="shutdown_layout" />
+  <java-symbol type="drawable" name="ic_android" />
+  <java-symbol type="drawable" name="shutdown_background" />
+  <java-symbol type="color" name="shutdown_primary_text" />
+  <java-symbol type="dimen" name="shutdown_margin" />
+  <java-symbol type="dimen" name="shutdown_logo_margin_top" />
+  <java-symbol type="dimen" name="shutdown_primary_text_margin_top" />
+  <java-symbol type="id" name="shutdown_logo" />
+  <java-symbol type="id" name="shutdown_message" />
+  <java-symbol type="id" name="shutdown_progress" />
 </resources>
