DucumentsUI : Design Overhaul
- Icon Credits : @snwh (Paper Project) & Flaticon

Change-Id: I7e4f1c479bf02244b178ccc0cc237c104dd611eb

--- a/packages/DocumentsUI/res/layout/directory_cluster.xml
+++ b/packages/DocumentsUI/res/layout/directory_cluster.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="8dp"
-        android:background="@color/material_grey_50"/>
+        android:background="@color/window_background"/>
 
     <FrameLayout
         android:id="@+id/container_directory"
@@ -36,7 +36,7 @@
         android:id="@+id/container_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/material_grey_50"
+        android:background="@color/window_background"
         android:elevation="8dp" />
 
 </LinearLayout>
