--- a/packages/DocumentsUI/res/drawable/ic_menu_new_folder.xml
+++ b/packages/DocumentsUI/res/drawable/ic_menu_new_folder.xml
@@ -1,5 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/ic_menu_new_folder_am_alpha"
-    android:tint="?android:attr/colorControlNormal"
-    android:autoMirrored="true" />
+<!--
+Copyright (C) 2017 Paper Project
+Copyright (C) 2017 Dragons-CAF Project
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="M9.5,24L54.5,24A2.5,2.5 0,0 1,57 26.5L57,53.5A2.5,2.5 0,0 1,54.5 56L9.5,56A2.5,2.5 0,0 1,7 53.5L7,26.5A2.5,2.5 0,0 1,9.5 24z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#4877b1" android:pathData="M7,44.5C7,45.88 8.11,47 9.5,47H54.5C55.88,47 57,45.88 57,44.5V17.5C57,16.11 55.88,15 54.5,15H29V12.5C29,11.11 27.89,10 26.5,10H9.5C8.11,10 7,11.11 7,12.5"/>
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="M9.5,22L54.5,22A2.5,2.5 0,0 1,57 24.5L57,51.5A2.5,2.5 0,0 1,54.5 54L9.5,54A2.5,2.5 0,0 1,7 51.5L7,24.5A2.5,2.5 0,0 1,9.5 22z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#dcdcdc" android:pathData="M12.5,18L51.5,18A2.5,2.5 0,0 1,54 20.5L54,35.5A2.5,2.5 0,0 1,51.5 38L12.5,38A2.5,2.5 0,0 1,10 35.5L10,20.5A2.5,2.5 0,0 1,12.5 18z"/>
+    <path android:fillColor="#5294e2" android:pathData="M9.5,23L54.5,23A2.5,2.5 0,0 1,57 25.5L57,52.5A2.5,2.5 0,0 1,54.5 55L9.5,55A2.5,2.5 0,0 1,7 52.5L7,25.5A2.5,2.5 0,0 1,9.5 23z"/>
+    <path android:fillAlpha="0.1" android:fillColor="#ffffff"
+        android:pathData="M9.5,10C8.11,10 7,11.11 7,12.5V13.5C7,12.11 8.11,11 9.5,11H26.5C27.89,11 29,12.11 29,13.5V12.5C29,11.11 27.89,10 26.5,10ZM29,15V16H54.5C55.89,16 57,17.11 57,18.5V17.5C57,16.11 55.89,15 54.5,15Z" android:strokeAlpha="0.1"/>
+</vector>
+
