--- a/packages/DocumentsUI/res/drawable/ic_root_documents.xml
+++ b/packages/DocumentsUI/res/drawable/ic_root_documents.xml
@@ -1,5 +1,6 @@
 <!--
-Copyright (C) 2015 The Android Open Source Project
+Copyright (C) 2017 Paper Project
+Copyright (C) 2017 Dragons-CAF Project
 
    Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -13,12 +14,22 @@ Copyright (C) 2015 The Android Open Source Project
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M10 4H4c-1.1 0,-1.99.9,-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2,-.9 2,-2V8c0,-1.1,-.9,-2,-2,-2h-8l-2,-2z"/>
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.2" android:fillColor="#000102"
+        android:pathData="m14.5,8c-1.38,0 -2.5,1.12 -2.5,2.5v45c0,1.38 1.12,2.5 2.5,2.5h35C50.88,58 52,56.88 52,55.5V23L38.25,21.75 37,8Z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#3e50b4" android:pathData="m14.5,7c-1.38,0 -2.5,1.12 -2.5,2.5v45c0,1.38 1.12,2.5 2.5,2.5h35c1.38,0 2.5,-1.12 2.5,-2.5v-32.5l-13.75,-1.25 -1.25,-13.75z"/>
+    <path android:fillAlpha="0.2" android:fillColor="#000102"
+        android:pathData="M37,8V20.5c0,1.38 1.12,2.5 2.5,2.5H52Z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#7482d0" android:pathData="m37,7v12.5c0,1.38 1.12,2.5 2.5,2.5h12.5l-15,-15z"/>
+    <path android:fillAlpha="0" android:fillColor="#fff"
+        android:pathData="m14.5,7c-1.38,0 -2.5,1.12 -2.5,2.5v2c0,-1.38 1.12,-2.5 2.5,-2.5h22.5v-2z" android:strokeAlpha="0"/>
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="m21,30v3h22v-3zM21,36v3h22v-3zM21,42v3h22v-3zM21,48v3h16v-3z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#fff" android:pathData="m21,29v3h22v-3h-22zM21,35v3h22v-3h-22zM21,41v3h22v-3h-22zM21,47v3h16v-3h-16z"/>
+    <path android:fillAlpha="0.1" android:fillColor="#ffffff"
+        android:pathData="m14.5,7c-1.38,0 -2.5,1.12 -2.5,2.5V10.5C12,9.11 13.11,8 14.5,8H37c0,-1 0,0 0,-1z" android:strokeAlpha="0.1"/>
 </vector>
+
+
+
