--- a/packages/DocumentsUI/res/drawable/ic_root_download.xml
+++ b/packages/DocumentsUI/res/drawable/ic_root_download.xml
@@ -1,4 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/ic_root_download_alpha"
-    android:tint="?android:attr/colorControlNormal" />
+<!--
+Copyright (C) 2017 Paper Project
+Copyright (C) 2017 Dragons-CAF Project
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="m4.05,32c-0.01,0.33 -0.05,0.66 -0.05,1C4,48.51 16.49,61 32,61 47.51,61 60,48.51 60,33c0,-0.34 -0.04,-0.67 -0.05,-1C59.42,47.04 47.17,59 32,59 16.82,59 4.58,47.04 4.05,32Z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#37a0f2" android:pathData="M60,32L60,32A28,28 0,0 0,32 4L32,4A28,28 0,0 0,4 32L4,32A28,28 0,0 0,32 60L32,60A28,28 0,0 0,60 32z"/>
+    <path android:fillAlpha="0.1" android:fillColor="#ffffff"
+        android:pathData="M32,4C16.49,4 4,16.49 4,32C4,32.11 4.01,32.22 4.02,32.34C4.37,17.13 16.71,5 32,5C47.29,5 59.63,17.13 59.98,32.34C59.99,32.22 60,32.11 60,32C60,16.49 47.51,4 32,4z" android:strokeAlpha="0.1"/>
+    <path android:fillAlpha="0.2" android:fillColor="#000000"
+        android:pathData="m29.33,17c-0.74,0 -1.33,0.46 -1.33,1.02l0,15.97 -6,0 10,12.22L42,34l-6,0 0,-15.97c0,-0.57 -0.59,-1.02 -1.33,-1.02l-5.33,0zM32,46.22 L21.2,46.22c-0.66,0 -1.2,0.62 -1.2,1.39 0,0.77 0.54,1.39 1.2,1.39l21.6,0c0.67,0 1.2,-0.62 1.2,-1.39 0,-0.77 -0.54,-1.39 -1.2,-1.39l-10.8,0z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#ffffff" android:pathData="m29.33,16c-0.74,0 -1.33,0.46 -1.33,1.02l0,15.97L22,33 32,45.22 42,33l-6,0 0,-15.97c0,-0.57 -0.59,-1.02 -1.33,-1.02l-5.33,0zM32,45.22 L21.2,45.22c-0.66,0 -1.2,0.62 -1.2,1.39 0,0.77 0.54,1.39 1.2,1.39l21.6,0c0.67,0 1.2,-0.62 1.2,-1.39 0,-0.77 -0.54,-1.39 -1.2,-1.39l-10.8,0z"/>
+</vector>
+
