--- a/packages/DocumentsUI/res/drawable/ic_root_recent.xml
+++ b/packages/DocumentsUI/res/drawable/ic_root_recent.xml
@@ -1,4 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/ic_root_recent_alpha"
-    android:tint="?android:attr/colorControlNormal" />
+<!--
+Copyright (C) 2017 Paper Project
+Copyright (C) 2017 Dragons-CAF Project
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="m4,39 l20,20h33c1.66,0 3,-1.34 3,-3v2c0,1.66 -1.34,3 -3,3h-33l-20,-20z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#da0e38" android:pathData="m56,4s4,0 4,4v48c0,4 -4,4 -4,4h-32l-20,-20v-32c0,-4 4,-4 4,-4z"/>
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="m4,40l17,0c1.66,0 3,1.34 3,3l0,17z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#f3395e" android:pathData="m4,40h17c1.66,0 3,1.34 3,3v17z"/>
+    <path android:fillAlpha="0.1" android:fillColor="#fff"
+        android:pathData="m21,40c1.66,0 3,1.34 3,3v1c0,-1.66 -1.34,-3 -3,-3h-16l-1,-1z" android:strokeAlpha="0.1"/>
+    <path android:fillAlpha="0.1" android:fillColor="#fff"
+        android:pathData="m56,4c1.66,0 4,2.34 4,4v1c0,-1.66 -2.34,-4 -4,-4h-48c-1.66,0 -4,2.34 -4,4v-1c0,-1.66 2.34,-4 4,-4z" android:strokeAlpha="0.1"/>
+    <path android:fillColor="#ececec" android:pathData="m44,18l0,-2l-24,0l0,2z"/>
+    <path android:fillColor="#ececec" android:pathData="m44,24l0,-2l-24,0l0,2z"/>
+    <path android:fillColor="#ececec" android:pathData="m44,30l0,-2l-24,0l0,2z"/>
+    <path android:fillColor="#ececec" android:pathData="m44,36l0,-2l-16,0l0,2z"/>
+</vector>
+
