--- a/packages/DocumentsUI/res/drawable/ic_root_smartphone.xml
+++ b/packages/DocumentsUI/res/drawable/ic_root_smartphone.xml
@@ -1,5 +1,6 @@
 <!--
-Copyright (C) 2015 The Android Open Source Project
+Copyright (C) 2017 Paper Project
+Copyright (C) 2017 Dragons-CAF Project
 
    Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -13,12 +14,17 @@ Copyright (C) 2015 The Android Open Source Project
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M17 1.01L7 1c-1.1 0,-2 .9,-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2,-.9 2,-2V3c0,-1.1,-.9,-1.99,-2,-1.99zM17 19H7V5h10v14z"/>
+<vector android:height="24dp" android:viewportHeight="64.0"
+    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillAlpha="0.2" android:fillColor="#FF000000"
+        android:pathData="M11,3L53,3A3,3 0,0 1,56 6L56,60A3,3 0,0 1,53 63L11,63A3,3 0,0 1,8 60L8,6A3,3 0,0 1,11 3z" android:strokeAlpha="0.2"/>
+    <path android:fillColor="#8e8e8e" android:pathData="M11,2L53,2A3,3 0,0 1,56 5L56,59A3,3 0,0 1,53 62L11,62A3,3 0,0 1,8 59L8,5A3,3 0,0 1,11 2z"/>
+    <path android:fillAlpha="0.5" android:fillColor="#FF000000"
+        android:pathData="M15,8L49,8A3,3 0,0 1,52 11L52,49A3,3 0,0 1,49 52L15,52A3,3 0,0 1,12 49L12,11A3,3 0,0 1,15 8z" android:strokeAlpha="0.5"/>
+    <path android:fillAlpha="0.5" android:fillColor="#FF000000"
+        android:pathData="M25,4L37,4A1,1 0,0 1,38 5L38,5A1,1 0,0 1,37 6L25,6A1,1 0,0 1,24 5L24,5A1,1 0,0 1,25 4z" android:strokeAlpha="0.5"/>
+    <path android:fillAlpha="0.5" android:fillColor="#FF000000"
+        android:pathData="M32,57m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0" android:strokeAlpha="0.5"/>
+    <path android:fillAlpha="0.2" android:fillColor="#ffffff"
+        android:pathData="M11,2C9.34,2 8,3.34 8,5L8,6C8,4.34 9.34,3 11,3L53,3C54.66,3 56,4.34 56,6L56,5C56,3.34 54.66,2 53,2L11,2z" android:strokeAlpha="0.2"/>
 </vector>
