--- a/packages/DocumentsUI/res/values/colors.xml
+++ b/packages/DocumentsUI/res/values/colors.xml
@@ -18,24 +18,24 @@
     <!-- This is the window background, but also the background for anything
          else that needs to manually declare a background matching the "default"
          app background (e.g. the drawer overlay). -->
-    <color name="window_background">#fff1f1f1</color>
-    <color name="drawer_background">#fff1f1f1</color>
-    <color name="directory_background">#fff7f7f7</color>
+    <color name="window_background">#F5F5F5</color>
+    <color name="drawer_background">#F5F5F5</color>
+    <color name="directory_background">#F5F5F5</color>
     <color name="menu_search_background">@android:color/transparent</color>
 
-    <color name="primary_dark">@*android:color/primary_dark_device_default_settings</color>
-    <color name="primary">@*android:color/primary_device_default_settings</color>
-    <color name="accent">@*android:color/accent_device_default_light</color>
-    <color name="accent_dark">@*android:color/accent_device_default_dark</color>
+    <color name="primary_dark">#5F7782</color>
+    <color name="primary">#5F7782</color>
+    <color name="accent">#607d8b</color>
+    <color name="accent_dark">#607d8b</color>
 
     <color name="band_select_background">#88ffffff</color>
     <color name="band_select_border">#44000000</color>
 
-    <color name="root_activated_color">@*android:color/accent_device_default_700</color>
+    <color name="root_activated_color">@color/accent</color>
 
     <!-- TODO: Would be nice to move this to a color-set, but not sure how to support animation -->
     <color name="item_doc_background">#fffafafa</color>
     <color name="item_doc_background_disabled">#fff4f4f4</color>
-    <color name="item_doc_background_selected">@*android:color/accent_device_default_50</color>
+    <color name="item_doc_background_selected">@color/accent</color>
 
 </resources>
